# nix-output-monitor

./: .envrc  .gitignore  .hlint.yaml  CHANGELOG.md  Main.hs  README.md  RELEASE-CHECKLIST.md  Test.hs  _typos.toml  cabal.project  cabal.project.local  default.nix  flake.nix  fourmolu.yaml  generate-expected.nix  hls.json  log.json  nix-output-monitor.cabal  nixos-test.nix  renovate.json  shell.nix  weeder.dhall
.forgejo/workflows/: pull-from-github.yaml  test.yaml
.github/: ALTERNATIVE_PUSH_PROTECTION_BYPASS.md  PUSH_PROTECTION_BYPASS.md
.github/workflows/: pull-from-forgejo.yaml  test.yaml
bench/: TODOS.txt  bench.sh  nom-shell-452e7d5.nix-log.zst  populate-store-for-benchmark.sh  profile.sh  scream.nix  slow-bench.sh
completions/: completion.zsh  nom-build.bash  nom-build.fish  nom-shell.bash  nom-shell.fish  nom.fish
completions/zsh/: _nom-shell.zsh  nom.zsh
exe/: Main.hs
exe-sh/: nom-build  nom-shell
lib-nix-derivation/Nix/: Derivation.hs
lib-nix-derivation/Nix/Derivation/: Parser.hs  Types.hs
lib/Data/Sequence/: Strict.hs
lib/NOM/: Builds.hs  Debug.hs  Error.hs  IO.hs  NixEvent.hs  Parser.hs  Print.hs  State.hs  StreamParser.hs  Update.hs  Util.hs
lib/NOM/IO/: Input.hs  ParseStream.hs
lib/NOM/IO/Input/: JSON.hs  OldStyle.hs
lib/NOM/IO/ParseStream/: Attoparsec.hs  Simple.hs
lib/NOM/NixEvent/: Action.hs
lib/NOM/NixMessage/: JSON.hs  OldStyle.hs
lib/NOM/Parser/: JSON.hs
lib/NOM/Parser/JSON/: Aeson.hs  Hermes.hs  Manual.hs
lib/NOM/Print/: Table.hs  Tree.hs
lib/NOM/State/: CacheId.hs  Sorting.hs  Tree.hs
lib/NOM/State/CacheId/: Map.hs  Set.hs
lib/NOM/Update/: Monad.hs
lib/NOM/Update/Monad/: CacheBuildReports.hs
nix/: sources.json  sources.nix
nix-output-monitor/: nix-output-monitor.cabal
nix-output-monitor/completions/: nom.bash
nix-output-monitor/exe/: Main.hs
nix-output-monitor/lib/NOM/: Error.hs  Parser.hs  Print.hs  StreamParser.hs  Update.hs
nix-output-monitor/lib/NOM/IO/Input/: OldStyle.hs
nix-output-monitor/lib/NOM/NixMessage/: OldStyle.hs
nix-output-monitor/lib/NOM/Print/: Tree.hs
nix-output-monitor/lib/NOM/State/: Initial.hs  Sorting.hs
nix-output-monitor/lib/NOM/State/CacheId/: Set.hs
nix-output-monitor/lib/NOM/Update/Monad/: CacheBuildReports.hs
nix-output-monitor/test/: DocTests.hs  IntegrationTests.hs
nix-output-monitor/test/integration/: all.nix
nix-output-monitor/test/integration/standard/: stderr.json  stdout
src/: Debug.hs  IO.hs  Parser.hs  Print.hs  Table.hs  Update.hs
src/NOM/: Debug.hs  IO.hs  Parser.hs  Print.hs  State.hs  Update.hs  Util.hs
src/NOM/Print/: Table.hs  Tree.hs
src/NOM/State/: Tree.hs
src/NOM/State/CacheId/: Map.hs  Set.hs
src/NOM/Update/: Monad.hs
src/NOM/Update/Monad/: CacheBuildReports.hs
src/Update/: Monad.hs
src/Update/Monad/: CacheBuildReports.hs
test/: Doctest.hs  Golden.hs  Main.hs  Property.hs  golden1-builder.sh  golden1.nix  golden1.nix-build-output  golden1.state  golden1.stderr  golden1.stdout  golden2.nix  golden3.nix
test/golden/: all.nix  default.nix  pin.nix
test/golden/fail/: default.nix  stderr  stderr.json
test/golden/standard/: default.nix  stderr  stderr.json
test/integration/: default.nix  pin.nix
test/integration/fail/: default.nix
test/integration/standard/: default.nix  stdout.json
