cabal-version:      2.2
name:               nix-output-monitor
version:            2.0.0.3
synopsis:           Parses output of nix-build to show additional information
description:
  A tool you can pipe stdout and stderr into to get your terminal output enriched with useful information.

homepage:           https://github.com/maralorn/nix-output-monitor
bug-reports:        https://github.com/maralorn/nix-output-monitor/issues
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             maralorn <mail@maralorn.de>
maintainer:         maralorn <mail@maralorn.de>
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  completions/completion.zsh
  test/golden1.stderr
  test/golden1.stdout

category:
  console
  nix

source-repository head
  type:     git
  location: https://git.maralorn.de/nix-output-monitor

common common-config
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    Strict
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , ansi-terminal
    , async
    , attoparsec
    , base            >=4.10 && <5.0
    , bytestring
    , cassava
    , containers
    , data-default
    , directory
    , extra
    , filepath
    , hermes-json
    , lock-file
    , MemoTrie
    , mtl
    , nix-derivation
    , optics
    , relude
    , safe
    , stm
    , streamly
    , terminal-size
    , text
    , time
    , wcwidth
    , word8

  default-language:   GHC2021
  ghc-options:
    -Weverything -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode -Wno-unsafe
    -Wno-missing-kind-signatures -fshow-warning-groups
    -fexpose-all-unfoldings -Wno-missed-specialisations
    -Wno-all-missed-specialisations

library
  import:          common-config
  hs-source-dirs:  lib
  exposed-modules:
    NOM.Builds
    NOM.Error
    NOM.IO
    NOM.IO.ParseStream.Attoparsec
    NOM.IO.ParseStream.Simple
    NOM.NixMessage.JSON
    NOM.NixMessage.OldStyle
    NOM.Parser
    NOM.Parser.JSON.Hermes
    NOM.Print
    NOM.Print.Table
    NOM.Print.Tree
    NOM.State
    NOM.State.CacheId
    NOM.State.CacheId.Map
    NOM.State.CacheId.Set
    NOM.State.Sorting
    NOM.State.Tree
    NOM.Update
    NOM.Update.Monad
    NOM.Update.Monad.CacheBuildReports
    NOM.Util

common exes
  import:      common-config
  ghc-options: -threaded -Wno-unused-packages -with-rtsopts=-maxN4

executable nom
  import:          exes
  hs-source-dirs:  exe
  main-is:         Main.hs
  other-modules:   Paths_nix_output_monitor
  build-depends:
    , nix-output-monitor
    , typed-process

  autogen-modules: Paths_nix_output_monitor

common tests
  import:        exes
  build-depends:
    , HUnit
    , nix-output-monitor
    , process

test-suite unit-tests
  import:         tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Property.hs

test-suite golden-tests
  import:         tests
  hs-source-dirs: test
  build-depends:  random
  type:           exitcode-stdio-1.0
  main-is:        Golden.hs
