cabal-version:      2.2
name:               nix-output-monitor
version:            2.0.0.7

-- The first two numbers get bumped, when the user interfaces changes in a breaking way. The first number, when the change feels large.
-- The third number gets bumped, when new features get added.
-- The fourth number is for all other releases, e.g. bug fixes, refactorings, performance.
synopsis:           Parses output of nix-build to show additional information
description:
  A tool you can pipe stdout and stderr into to get your terminal output enriched with useful information.

homepage:           https://github.com/maralorn/nix-output-monitor
bug-reports:        https://github.com/maralorn/nix-output-monitor/issues
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             maralorn <mail@maralorn.de>
maintainer:         maralorn <mail@maralorn.de>
build-type:         Simple
extra-source-files:
  completions/completion.zsh
  test/golden/fail/stderr
  test/golden/fail/stderr.json
  test/golden/fail/stdout
  test/golden/fail/stdout.json
  test/golden/standard/stderr
  test/golden/standard/stderr.json
  test/golden/standard/stdout
  test/golden/standard/stdout.json

extra-doc-files:    CHANGELOG.md
category:
  console
  nix

source-repository head
  type:     git
  location: https://git.maralorn.de/nix-output-monitor

common common-config
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  build-depends:
    , ansi-terminal
    , async
    , attoparsec
    , base            >=4.10    && <5.0
    , bytestring
    , cassava
    , containers
    , data-default
    , directory
    , extra
    , filepath
    , hermes-json     >=0.6.0.0
    , lock-file
    , MemoTrie
    , nix-derivation
    , optics
    , relude
    , safe
    , stm
    , streamly-core
    , strict
    , strict-types
    , terminal-size
    , text
    , time
    , transformers
    , typed-process
    , word8

  default-language:   GHC2021
  ghc-options:
    -Weverything -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode -Wno-unsafe
    -Wno-missing-kind-signatures -fshow-warning-groups
    -fexpose-all-unfoldings -Wno-missed-specialisations
    -Wno-all-missed-specialisations

library
  import:          common-config
  hs-source-dirs:  lib
  exposed-modules:
    Data.Sequence.Strict
    NOM.Builds
    NOM.Error
    NOM.IO
    NOM.IO.Input
    NOM.IO.Input.JSON
    NOM.IO.Input.OldStyle
    NOM.NixMessage.JSON
    NOM.NixMessage.OldStyle
    NOM.Parser
    NOM.Parser.JSON
    NOM.Print
    NOM.Print.Table
    NOM.Print.Tree
    NOM.State
    NOM.State.CacheId
    NOM.State.CacheId.Map
    NOM.State.CacheId.Set
    NOM.State.Sorting
    NOM.State.Tree
    NOM.StreamParser
    NOM.Update
    NOM.Update.Monad
    NOM.Update.Monad.CacheBuildReports
    NOM.Util

common exes
  import:      common-config
  ghc-options: -threaded -Wno-unused-packages -with-rtsopts=-maxN2

executable nom
  import:          exes
  hs-source-dirs:  exe
  main-is:         Main.hs
  other-modules:   Paths_nix_output_monitor
  build-depends:
    , nix-output-monitor
    , typed-process
    , unix

  autogen-modules: Paths_nix_output_monitor

common tests
  import:        exes
  build-depends:
    , HUnit
    , nix-output-monitor
    , typed-process

test-suite unit-tests
  import:         tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Property.hs

test-suite golden-tests
  import:         tests
  hs-source-dirs: test
  build-depends:  random
  type:           exitcode-stdio-1.0
  main-is:        Golden.hs
