cabal-version: 2.2
name: nix-output-monitor
version: 2.1.8
synopsis:
  Processes output of Nix commands to show helpful and pretty information

description:
  A tool which consumes Nix’s output to enrich your terminal output with useful information.

homepage: https://code.maralorn.de/maralorn/nix-output-monitor
bug-reports: https://github.com/maralorn/nix-output-monitor/issues
license: AGPL-3.0-or-later
license-file: LICENSE
author: maralorn <mail@maralorn.de>
maintainer: maralorn <mail@maralorn.de>
build-type: Simple
extra-source-files:
  completions/completion.bash
  completions/completion.zsh
  test/golden/fail/stderr
  test/golden/fail/stderr.json
  test/golden/fail/stdout
  test/golden/fail/stdout.json
  test/golden/standard/stderr
  test/golden/standard/stderr.json
  test/golden/standard/stdout
  test/golden/standard/stdout.json

extra-doc-files: CHANGELOG.md
category:
  console
  nix

source-repository head
  type: git
  location: https://code.maralorn.de/maralorn/nix-output-monitor

common common-config
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    NoDeriveGeneric
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TemplateHaskell
    TypeFamilies
    TypeOperators
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  build-depends:
    ansi-terminal,
    async,
    attoparsec,
    base >=4.10 && <5.0,
    bytestring,
    cassava,
    containers,
    directory,
    extra,
    filelock,
    filepath,
    hermes-json >=0.6.0.0,
    nix-derivation,
    optics,
    relude,
    safe,
    safe-exceptions,
    stm,
    streamly-core,
    strict,
    terminal-size,
    text,
    time,
    transformers,
    word8,

  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-implicit-prelude
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-unticked-promoted-constructors
    -Wno-safe
    -Wno-unsafe
    -fno-show-valid-hole-fits
    -fexpose-all-unfoldings
    -fshow-warning-groups

library
  import: common-config
  hs-source-dirs: lib
  -- cabal-gild: discover lib
  exposed-modules:
    Data.Sequence.Strict
    NOM.Builds
    NOM.Error
    NOM.IO
    NOM.IO.Input
    NOM.IO.Input.JSON
    NOM.IO.Input.OldStyle
    NOM.NixMessage.JSON
    NOM.NixMessage.OldStyle
    NOM.Parser
    NOM.Parser.JSON
    NOM.Print
    NOM.Print.Table
    NOM.Print.Tree
    NOM.State
    NOM.State.CacheId
    NOM.State.CacheId.Map
    NOM.State.CacheId.Set
    NOM.State.Sorting
    NOM.State.Tree
    NOM.StreamParser
    NOM.Update
    NOM.Update.Monad
    NOM.Update.Monad.CacheBuildReports
    NOM.Util

common exes
  import: common-config
  ghc-options:
    -threaded
    -Wno-unused-packages
    -with-rtsopts=-maxN2

executable nom
  import: exes
  hs-source-dirs: exe
  main-is: Main.hs
  other-modules: Paths_nix_output_monitor
  build-depends:
    nix-output-monitor,
    typed-process,
    unix,

  autogen-modules: Paths_nix_output_monitor

common tests
  import: exes
  build-depends:
    HUnit,
    nix-output-monitor,
    typed-process,

test-suite unit-tests
  import: tests
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Property.hs

test-suite golden-tests
  import: tests
  hs-source-dirs: test
  build-depends: random
  type: exitcode-stdio-1.0
  main-is: Golden.hs
